# math

./: CMakeLists.txt  Math.hpp
geometry/: CMakeLists.txt  Geometry.hpp  GeometryCalculator.cpp  GeometryCalculator.h  GeometryCalculatorOld.h  Line.h  Line.hpp  LineSegment.h  Pose.hpp  Ray.h  ReferenceFrame.hpp  ReferenceFrame2d.hpp  SpatialTree.h
include/math/: kalman.hpp
include/math/geometry/: GeometryCalculator.hpp  LineSegment.hpp  Ray.hpp  ReferenceFrame.hpp  ReferencePoint.hpp  SpatialTree.h  Vector.h
matrix/: LUDecomposition.h  Matrix.cpp  Matrix.h
test/: CMakeLists.txt  GeometryCalculatorTest.cpp  MathTest.cpp  ReferenceFrameTest.cpp
